--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -19,6 +19,7 @@
     <link rel="stylesheet" href="css/master.css">
     <link rel="stylesheet" type="text/css" href="css/estils.css" />
     <link rel="stylesheet" href="styles/custom-janrain.css" type="text/css">
+    <link rel="stylesheet" href="styles/jquery-ui.css" type="text/css">
     <!-- <link rel="stylesheet" type="text/css" href="styles/styles.css" /> -->
     <script src="vendor/jquery-2.2.4.min.js"></script>
     <!-- <script language="javascript" src="scripts/javas.js"></script> -->
@@ -27,6 +28,7 @@
     <script src="vendor/janrain-init.js"></script>
     <script src="https://eucookie.xh1.lilly.com/Scripts/EUCookiesScript.js"></script>
     <script src="/socket.io/socket.io.js"></script>
+    <script src="vendor/jquery-ui.js"></script>
 
     <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
     new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
