load course: date bug fixed

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -5,11 +5,11 @@
 <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-COMPATIBLE" content="IE=edge"/>
-    <title>Aula Diabetes</title>
+    <title>Aula diabetes de Lilly</title>
 
     <!-- Setting the right viewport -->
-    <meta name="keywords" content="Aula Diabetes" />
-    <meta name="description" content="Aula Diabetes" />
+    <meta name="keywords" content="Formación diabetes, profesionales sanitarios, diabetes atención primaria, diabetes endocrino, diabetes enfermería, diabetes urgencias, calendario congresos diabetes, herramientas clínicas diabetes" />
+    <meta name="description" content="Portal de formación en diabetes para profesionales sanitarios (atención primaria, endocrino, enfermería, urgencias), calendario de congresos y herramientas clínicas para el tratamiento del paciente diabético" />
     <meta name="viewport" content="initial-scale = 1.0,maximum-scale = 1.0" />
     <meta name="robots" content="noarchive" />
     <meta name="googlebot" content="noarchive" />
