--- a/src/public/less/master.less
+++ b/src/public/less/master.less
@@ -3192,3 +3192,111 @@ media all and (min-width:1100px){
     right: -50px;
   }
 }
+
+.fixed-box {
+  position: fixed;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  background: rgba(0, 0, 0, 0.5);
+  overflow: hidden;
+  z-index: 2;
+
+  .fix-box-inner {
+    position: fixed;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    overflow-y: scroll;
+    padding: 0 50px;
+
+    .page-box-close {
+      position: absolute;
+      top: 0;
+      right: -40px;
+      cursor: pointer;
+
+      img {
+        width: 30px;
+        height: 30px;
+      }
+    }
+
+    .title {
+      text-align: center;
+      font: 24px/1 'Apex New Light';
+      color: #f36c00 !important;
+      margin-top: 25px;
+      margin-bottom: 12px;
+    }
+  }
+}
+
+.login-box {
+  position: relative;
+  width: 536px;
+  padding: 52px 95px;
+  background: #ffffff;
+  margin: 150px auto 0;
+}
+
+#password-changed {
+  .title {
+    text-align: left;
+  }
+}
+
+#login {
+
+  .wrp-buttons {
+    margin-top: 25px;
+  }
+
+  .btn-cancel, .btn-login {
+    width: 135px;
+  }
+
+  .wrp-remember {
+    display: inline-block;
+    margin: 25px 0 0;
+
+  }
+
+  .forgot-pass {
+    margin: 25px 0 0 0;
+  }
+
+  .register {
+    margin-top: 10px;
+    color: #425464;
+  }
+}
+
+#congrats {
+
+  .register-info-box {
+    width: 530px;
+    min-height: 200px;
+    top: 110px;
+    left: 50%;
+    margin-left: -265px;
+    padding: 38px 0 53px;
+    text-align: center;
+  }
+
+  .reg-confirmed {
+    font-size: 12px;
+    line-height: 20px;
+    padding: 0 90px;
+  }
+
+  .wrp-btn-close {
+    margin-top: 25px;
+  }
+
+  .btn-close {
+    width: 137px;
+  }
+}
