Fixed issue #54558: Window title is not updated for all the pages

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -5,7 +5,7 @@
 <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-COMPATIBLE" content="IE=edge"/>
-    <title>Aula diabetes de Lilly</title>
+    <title>Aula Diabetes</title>
 
     <!-- Setting the right viewport -->
     <meta name="keywords" content="Formación diabetes, profesionales sanitarios, diabetes atención primaria, diabetes endocrino, diabetes enfermería, diabetes urgencias, calendario congresos diabetes, herramientas clínicas diabetes" />
