--- a/src/public/less/master.less
+++ b/src/public/less/master.less
@@ -3300,3 +3300,9 @@ media all and (min-width:1100px){
     width: 137px;
   }
 }
+
+.disable-button {
+    pointer-events: none;
+    cursor: default;
+    opacity: 0.6;
+}
