Added SSO Lilly employee login

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -5,7 +5,7 @@
 <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-COMPATIBLE" content="IE=edge"/>
-    <title>Aula Diabetes</title>
+    <title>Aula diabetes de Lilly</title>
 
     <!-- Setting the right viewport -->
     <meta name="keywords" content="Formación diabetes, profesionales sanitarios, diabetes atención primaria, diabetes endocrino, diabetes enfermería, diabetes urgencias, calendario congresos diabetes, herramientas clínicas diabetes" />
@@ -28,6 +28,7 @@
     <script src="https://eucookie.xh1.lilly.com/Scripts/EUCookiesScript.js"></script>
     <script src="/socket.io/socket.io.js"></script>
     <script src="vendor/jquery-ui.js"></script>
+    <script src="vendor/xdcomm.js"></script>
 
     <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
     new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
