Fixed issue #53881: Back ground image is not appearing for the login page Fixed issue #54467: [My Profile ]Volver, Descargar acreditación, Imprimir acreditación buttons are printing when user prints the diploma certificate Fixed issue #54470: [Diploma Certificate ]Lilly logo and teacher's signature is getting printed out of the defined border of the diploma certficate

--- a/src/public/less/master.less
+++ b/src/public/less/master.less
@@ -722,7 +722,7 @@ div.section-home {
 
     div.all {
 
-        background-image: url(../img/home/back-login.jpg);
+        background-image: url(../img/home/back-login.png);
         background-size: cover;
         padding-top: 150px;
         padding-bottom: 30px;
@@ -3305,4 +3305,10 @@ media all and (min-width:1100px){
     pointer-events: none;
     cursor: default;
     opacity: 0.6;
+}
+
+@media print {
+  .tools.center {
+    display: none;
+  }
 }
