--- a/src/public/less/master.less
+++ b/src/public/less/master.less
@@ -3311,4 +3311,8 @@ media all and (min-width:1100px){
   .tools.center {
     display: none;
   }
+
+  .downloadSection{
+    height: auto !important;
+  }
 }
