--- a/src/public/less/master.less
+++ b/src/public/less/master.less
@@ -3397,7 +3397,6 @@ ul#janrainProviders_1 {
     font-size: 14px !important;
     font-family: 'DIN', Arial, Helvetica, sans-serif !important;
     border: 0px !important;
-    background-color: #e31d1a !important;
     color: #fff !important;
     margin-bottom: 5px !important;
     cursor: pointer !important;
@@ -3425,12 +3424,14 @@ ul#janrainProviders_1 {
     font-weight: 300 !important;
     font-size: 13px !important;
     color: #666 !important;
+    padding-top: 15px;
+    padding-bottom: 15px;
 }
 .janrain-capture-ui#editProfile {
     margin-bottom: 30px !important;
 }
 @media only screen and (min-width: 1023px) {
     #registration_termsAndConditionsLabel {
-        width: 96% !important;
+        width: 92% !important;
     }
 }
