--- a/lib/public/css/master.css
+++ b/lib/public/css/master.css
@@ -236,6 +236,9 @@ div.content {
   #indicador-responsive div.tablet {
     display: none;
   }
+  #indicador-responsive input#capture_editProfile_saveButton {
+    margin-top: 10px !important;
+  }
   #indicador-responsive div.mobile {
     display: block;
   }
@@ -2782,11 +2785,12 @@ html {
   -webkit-text-size-adjust: 100%;
 }
 header div.miperfil div.bola {
-  width: 30px;
-  height: 30px;
+  width: 25px;
+  height: 25px;
   -webkit-border-radius: 50%;
-  line-height: 30px;
-  margin-top: -5px;
+  line-height: 24px;
+  margin-top: 2px;
+  margin-left: -3px;
 }
 media all and (min-width:1100px) div.slider-header div.paginator div:hover {
   color: #e31d1a;
@@ -3030,5 +3034,120 @@ media all and (min-width:1100px) div.slider-header div.paginator div:hover .svg 
   }
   .downloadSection {
     height: auto !important;
+  }
+}
+/* custom third developer comments addressed */
+.janrain-capture-ui .capture_form_item {
+  clear: initial !important;
+}
+#capture_editProfile_editProfileForm .capture_select {
+  width: 100% !important;
+  padding: 10px !important;
+  font-size: 14px !important;
+  font-family: 'DIN', Arial, Helvetica, sans-serif !important;
+  font-weight: 300 !important;
+  border: 1px solid #cccccc !important;
+  margin-bottom: 5px !important;
+  border-radius: 5px !important;
+  color: #333 !important;
+  -webkit-appearance: none !important;
+  background-color: transparent !important;
+  box-shadow: none !important;
+}
+#capture_editProfile_editProfileForm .capture_text_input {
+  width: 100% !important;
+  padding: 10px !important;
+  font-size: 14px !important;
+  font-family: 'DIN', Arial, Helvetica, sans-serif !important;
+  font-weight: 300 !important;
+  border: 1px solid #cccccc !important;
+  margin-bottom: 5px !important;
+  border-radius: 5px !important;
+  color: #333 !important;
+  -webkit-appearance: none !important;
+  background-color: transparent !important;
+  box-shadow: none !important;
+}
+.janrain-capture-ui .capture_col_8 {
+  width: 100% !important;
+}
+.janrainContent {
+  margin: 0 auto !important;
+  background-color: transparent !important;
+  border: none !important;
+  margin-top: 15px !important;
+  height: 40px !important;
+  width: 198px !important;
+}
+.janrain-capture-ui .login_widget {
+  min-height: auto !important;
+}
+li#janrain-twitter {
+  display: none;
+}
+ul#janrainProviders_1 {
+  display: none;
+}
+#editProfile h3 {
+  font-family: 'DIN', Arial, Helvetica, sans-serif !important;
+  margin: 0 0 14px !important;
+}
+.janrain-capture-ui .capture_form_item .capture_btn {
+  width: 100% !important;
+}
+.janrain-capture-ui .capture_form_item > label {
+  width: 100% !important;
+  font-size: 14px !important;
+  font-family: 'DIN', Arial, Helvetica, sans-serif !important;
+  font-weight: 300 !important;
+  margin-bottom: 5px !important;
+  color: #333 !important;
+  -webkit-appearance: none !important;
+}
+.janrain-capture-ui .capture_form_item:last-child {
+  margin-bottom: 15px !important;
+}
+#capture_editProfile_saveButton {
+  width: 100% !important;
+  padding: 10px !important;
+  font-size: 14px !important;
+  font-family: 'DIN', Arial, Helvetica, sans-serif !important;
+  border: 0px !important;
+  color: #fff !important;
+  margin-bottom: 5px !important;
+  cursor: pointer !important;
+  border-radius: 5px !important;
+  transition: 0.3s !important;
+}
+#capture_editProfile_editProfileForm .capture_form_item.column.col-4 {
+  margin-top: 2%;
+}
+.janrain-capture-ui#editProfile .capture_form_item label {
+  margin-bottom: 4px !important;
+}
+.note {
+  font-family: 'DIN', Arial, Helvetica, sans-serif !important;
+  font-weight: 300 !important;
+  font-size: 13px !important;
+  color: #666 !important;
+}
+.forgot-password {
+  line-height: 5px !important;
+  clear: both !important;
+  margin-left: 0 !important;
+  margin-bottom: 15px !important;
+  font-family: 'DIN', Arial, Helvetica, sans-serif !important;
+  font-weight: 300 !important;
+  font-size: 13px !important;
+  color: #666 !important;
+  padding-top: 15px;
+  padding-bottom: 15px;
+}
+.janrain-capture-ui#editProfile {
+  margin-bottom: 30px !important;
+}
+@media only screen and (min-width: 1023px) {
+  #registration_termsAndConditionsLabel {
+    width: 92% !important;
   }
 }
