Internal QA Issues has been fixed in the Git and also bundle.js bundled through gulp.

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -8,8 +8,8 @@
     <title>Aula Diabetes</title>
 
     <!-- Setting the right viewport -->
-    <meta name="keywords" content="Formación diabetes, profesionales sanitarios, diabetes atención primaria, diabetes endocrino, diabetes enfermería, diabetes urgencias, calendario congresos diabetes, herramientas clínicas diabetes" />
-    <meta name="description" content="Portal de formación en diabetes para profesionales sanitarios (atención primaria, endocrino, enfermería, urgencias), calendario de congresos y herramientas clínicas para el tratamiento del paciente diabético" />
+    <meta name="keywords" content="Formaciï¿½n diabetes, profesionales sanitarios, diabetes atenciï¿½n primaria, diabetes endocrino, diabetes enfermerï¿½a, diabetes urgencias, calendario congresos diabetes, herramientas clï¿½nicas diabetes" />
+    <meta name="description" content="Portal de formaciï¿½n en diabetes para profesionales sanitarios (atenciï¿½n primaria, endocrino, enfermerï¿½a, urgencias), calendario de congresos y herramientas clï¿½nicas para el tratamiento del paciente diabï¿½tico" />
     <meta name="viewport" content="initial-scale = 1.0,maximum-scale = 1.0" />
     <meta name="robots" content="noarchive" />
     <meta name="googlebot" content="noarchive" />
@@ -22,7 +22,7 @@
     <link rel="stylesheet" href="styles/jquery-ui.css" type="text/css">
     <!-- <link rel="stylesheet" type="text/css" href="styles/styles.css" /> -->
     <script src="vendor/jquery-2.2.4.min.js"></script>
-    <script language="javascript" src="scripts/slider.class.js"></script>
+    <script language="javascript" src="vendor/slider.class.js"></script>
     
     <script src="vendor/janrain-init.js"></script>
     <script src="https://eucookie.xh1.lilly.com/Scripts/EUCookiesScript.js"></script>
