--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -22,6 +22,8 @@
     <link rel="stylesheet" href="styles/jquery-ui.css" type="text/css">
     <!-- <link rel="stylesheet" type="text/css" href="styles/styles.css" /> -->
     <script src="vendor/jquery-2.2.4.min.js"></script>
+    <script language="javascript" src="vendor/jspdf.min.js"></script>
+    <script language="javascript" src="vendor/html2canvas.min.js"></script>
     <script language="javascript" src="vendor/slider.class.js"></script>
     
     <script src="vendor/janrain-init.js"></script>
