--- a/lib/public/css/master.css
+++ b/lib/public/css/master.css
@@ -2857,10 +2857,6 @@ media all and (min-width:1100px) div.slider-header div.paginator div:hover .svg 
   -o-transform: translate(-50%, 0);
   transform: translate(-50%, 0);
   z-index: 2;
-  background: #ffffff;
-  margin: 30px auto;
-  max-width: calc(100% - 120px);
-  min-height: 100px;
 }
 .my-modal .my-modal-dialog.full-screen {
   width: 100%;
@@ -2900,8 +2896,9 @@ media all and (min-width:1100px) div.slider-header div.paginator div:hover .svg 
 }
 .my-modal .my-modal-close {
   position: absolute;
-  top: 0;
-  right: -40px;
+  top: 150px;
+  right: -220px;
+  z-index: 10;
   cursor: pointer;
 }
 .my-modal .my-modal-close img {
@@ -3157,4 +3154,8 @@ ul#janrainProviders_1 {
 }
 input#capture_changePassword_saveButton {
   margin-top: 30px !important;
+}
+.accept-sec {
+  display: block;
+  clear: both;
 }
