--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -19,6 +19,8 @@
     <link rel="stylesheet" href="css/master.css">
     <link rel="stylesheet" type="text/css" href="css/estils.css" />
     <link rel="stylesheet" href="styles/custom-janrain.css" type="text/css">
+    <link rel="stylesheet" href="styles/janrain-mobile.css" type="text/css">
+    <link rel="stylesheet" href="styles/janrain.css" type="text/css">
     <link rel="stylesheet" href="styles/jquery-ui.css" type="text/css">
     <!-- <link rel="stylesheet" type="text/css" href="styles/styles.css" /> -->
     <script src="vendor/jquery-2.2.4.min.js"></script>
