--- a/src/public/less/master.less
+++ b/src/public/less/master.less
@@ -3231,18 +3231,20 @@ media all and (min-width:1100px){
 
     .title {
       text-align: center;
-      font: 24px/1 'Apex New Light';
+      font: 24px/1 'DIN', Arial, Helvetica, sans-serif;
       color: #f36c00 !important;
       margin-top: 25px;
       margin-bottom: 12px;
     }
   }
 }
-
+.capture_left {
+    display: none;
+}
 .login-box {
   position: relative;
   width: 536px;
-  padding: 52px 95px;
+  padding: 26px 53px 95px;
   background: #ffffff;
   margin: 150px auto 0;
 }
