--- a/src/public/styles/custom-janrain.css
+++ b/src/public/styles/custom-janrain.css
@@ -88,9 +88,9 @@ body{
 /** Forgot password form **/
 .capture_forgotPasswordForm label { display: none !important;}
 
-#forgotPassword h1, .capture_header h1{
-	text-align: center;
-    font-family: 'Apex New Book';
+#forgotPassword h1, .capture_header h1 {
+    text-align: center;
+    font-family: 'DIN', Arial, Helvetica, sans-serif;
     color: #f36c00 !important;
     margin-top: 25px;
     margin-bottom: 12px;
@@ -98,6 +98,61 @@ body{
     display: block;
 }
 
+input#capture_forgotPassword_traditionalSignIn_emailAddress {
+    margin-top: 11px;
+}
+input.form-control {
+    background-color: #f6f6f6;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    box-shadow: 0 0 3px rgba(0,0,0,0.2) inset;
+    color: #b3b3b3;
+    font-family: 'DIN', Arial, Helvetica, sans-serif !important;
+    font-size: 14px;
+    khtml-border-radius: 5px;
+    margin-left: 0;
+    margin-right: 0;
+    moz-border-radius: 5px;
+    moz-box-shadow: 0 0 3px rgba(0,0,0,0.2) inset;
+    ms-border-radius: 5px;
+    o-border-radius: 5px;
+    o-box-shadow: 0 0 3px rgba(0,0,0,0.2) inset;
+    webkit-border-radius: 5px;
+    webkit-box-shadow: 0 0 3px rgba(0,0,0,0.2) inset;
+    padding: 6px 5px;
+    margin: 4px 0;
+    outline: none;
+	width:60%;
+}
+span.input-group-addon {
+    background: #e31d1a;
+    padding: 6px 6px 6px;
+    margin-right: 10px;
+}
+.btn-cancel, .btn-login {
+    background-color: #e31d1a !important;
+    color: #fff;
+    text-shadow: 0 1px 1px rgba(0,0,0,0.45);
+    box-shadow: 0 1px 0px 0px rgba(255,255,255,0.35) inset, 0 -26px 13px -13px rgba(0,0,0,0.2) inset;
+    font-family: helvetica,sans-serif;
+    moz-box-shadow: 0 1px 0px 0px rgba(255,255,255,0.35) inset,0 -26px 13px -13px rgba(0,0,0,0.2) inset;
+    o-box-shadow: 0 1px 0px 0px rgba(255,255,255,0.35) inset,0 -26px 13px -13px rgba(0,0,0,0.2) inset;
+    webkit-box-shadow: 0 1px 0px 0px rgba(255,255,255,0.35) inset,0 -26px 13px -13px rgba(0,0,0,0.2) inset;
+    text-decoration: none;
+    border-radius: 5px;
+    font-size: 14px;
+    line-height: 15px;
+    padding: 10px;
+    margin: 0px;
+    border: none;
+    cursor: pointer;
+    width: auto;
+    display: -moz-inline-box;
+    -moz-box-orient: vertical;
+    display: inline-block;
+    vertical-align: middle;
+	width:98px !important;
+}
 .capture_header{
 	border-bottom: 0 none !important;
 	margin-bottom: 0 !important;
