--- a/lib/public/css/master.css
+++ b/lib/public/css/master.css
@@ -2936,6 +2936,12 @@ media all and (min-width:1100px) div.slider-header div.paginator div:hover .svg 
   top: -50px;
   right: -50px;
 }
+#main-content .fixed-box .fix-box-inner .page-box-close {
+  position: absolute;
+  top: 7px;
+  right: 10px;
+  cursor: pointer;
+}
 .fixed-box {
   position: fixed;
   top: 0;
@@ -2954,12 +2960,6 @@ media all and (min-width:1100px) div.slider-header div.paginator div:hover .svg 
   left: 0;
   overflow-y: scroll;
   padding: 0 50px;
-}
-.fixed-box .fix-box-inner .page-box-close {
-  position: absolute;
-  top: 0;
-  right: -40px;
-  cursor: pointer;
 }
 .fixed-box .fix-box-inner .page-box-close img {
   width: 30px;
@@ -3016,6 +3016,7 @@ media all and (min-width:1100px) div.slider-header div.paginator div:hover .svg 
   font-size: 12px;
   line-height: 20px;
   padding: 0 90px;
+  margin-bottom: 6%;
 }
 #congrats .wrp-btn-close {
   margin-top: 25px;
