--- a/lib/public/styles/janrain.css
+++ b/lib/public/styles/janrain.css
@@ -1347,3 +1347,48 @@ $MERGE ACCOUNTS
   o-box-shadow: 0 1px 0 0 rgba(255,255,255,0.35) inset;
   webkit-box-shadow: 0 1px 0 0 rgba(255,255,255,0.35) inset;
 }
+
+.janrain-icon-16 {
+    font-size: 16px;
+    line-height: 1;
+    font-size: 26px;
+    color: #e31d1a;
+}
+.success-btn {
+    margin-top: 11%;
+    text-align: center;
+}
+.login-box {
+    position: relative;
+    width: 474px;
+    padding: 26px 53px 49px;
+    background: #ffffff;
+    margin: 151px auto 0;
+}
+a.btn.btn-orange {
+    background-color: #f6f6f6;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    box-shadow: 0 0 3px rgba(0,0,0,0.2) inset;
+    color: #b3b3b3;
+    font-family: 'DIN', Arial, Helvetica, sans-serif !important;
+    font-size: 14px;
+    khtml-border-radius: 5px;
+    margin-left: 0;
+    margin-right: 0;
+    moz-border-radius: 5px;
+    moz-box-shadow: 0 0 3px rgba(0,0,0,0.2) inset;
+    ms-border-radius: 5px;
+    o-border-radius: 5px;
+    o-box-shadow: 0 0 3px rgba(0,0,0,0.2) inset;
+    webkit-border-radius: 5px;
+    webkit-box-shadow: 0 0 3px rgba(0,0,0,0.2) inset;
+    padding: 10px;
+    
+    outline: none;
+    width: 26%;
+    background-color: #e31d1a !important;
+    color: #fff;
+    text-shadow: 0 1px 1px rgba(0,0,0,0.45);
+
+}
