--- a/lib/public/css/master.css
+++ b/lib/public/css/master.css
@@ -2967,6 +2967,11 @@ media all and (min-width:1100px) div.slider-header div.paginator div:hover .svg 
   overflow-y: scroll;
   padding: 0 50px;
 }
+@media only screen and (max-width: 767px) {
+  .fixed-box .fix-box-inner {
+    padding: 0 !important;
+  }
+}
 .fixed-box .fix-box-inner .page-box-close img {
   width: 30px;
   height: 30px;
@@ -2987,6 +2992,12 @@ media all and (min-width:1100px) div.slider-header div.paginator div:hover .svg 
   padding: 26px 53px 95px;
   background: #ffffff;
   margin: 150px auto 0;
+}
+@media only screen and (max-width: 767px) {
+  .login-box {
+    width: 96%;
+    max-width: 100%;
+  }
 }
 #password-changed .title {
   text-align: left;
