--- a/src/public/less/master.less
+++ b/src/public/less/master.less
@@ -3476,3 +3476,7 @@ input#capture_changePassword_saveButton {
     display: block;
     clear: both;
 }
+
+.size3.fontStyle {
+    font-size: 30px !important;
+}
