--- a/src/public/less/master.less
+++ b/src/public/less/master.less
@@ -322,7 +322,8 @@ header {
                 font-weight: 500;
                 border-right: 1px solid rgba(255, 255, 255, 0.5);
                 padding-top: 2px;
-                transition: 0.3s;                
+                transition: 0.3s;
+                font-size: 17px;               
 
                 &:hover, &.active {
                     color: rgba(255, 255, 255, 0.5);
@@ -1248,6 +1249,16 @@ div.results-search {
                 margin: 1em 0;
                 font-size: 13px;
                 font-weight:300;
+                min-height: 30px;
+                display: block;
+                display: -webkit-box;
+                min-height: 33.2px;
+                margin: 0 auto;
+                -webkit-line-clamp: 2;
+                -webkit-box-orient: vertical;
+                overflow: hidden;
+                text-overflow: ellipsis;
+                margin-bottom: 7px;
             }
 
             div.more {
@@ -3479,4 +3490,14 @@ input#capture_changePassword_saveButton {
 
 .size3.fontStyle {
     font-size: 30px !important;
+}
+p.info {
+    display: block;
+    display: -webkit-box;
+    min-height: 80.2px;
+    margin: 0 auto;
+    -webkit-line-clamp: 5;
+    -webkit-box-orient: vertical;
+    overflow: hidden;
+    text-overflow: ellipsis;
 }
