--- a/lib/public/css/master.css
+++ b/lib/public/css/master.css
@@ -377,6 +377,7 @@ header div.center-col ul.main-menu li a {
   border-right: 1px solid rgba(255, 255, 255, 0.5);
   padding-top: 2px;
   transition: 0.3s;
+  font-size: 17px;
 }
 header div.center-col ul.main-menu li a:hover,
 header div.center-col ul.main-menu li a.active {
@@ -1215,6 +1216,16 @@ div.results-search div.event div.txt h3.title {
   margin: 1em 0;
   font-size: 13px;
   font-weight: 300;
+  min-height: 30px;
+  display: block;
+  display: -webkit-box;
+  min-height: 33.2px;
+  margin: 0 auto;
+  -webkit-line-clamp: 2;
+  -webkit-box-orient: vertical;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  margin-bottom: 7px;
 }
 div.results-search div.event div.txt div.more {
   text-transform: uppercase;
@@ -3179,4 +3190,17 @@ input#capture_changePassword_saveButton {
 .accept-sec {
   display: block;
   clear: both;
+}
+.size3.fontStyle {
+  font-size: 30px !important;
+}
+p.info {
+  display: block;
+  display: -webkit-box;
+  min-height: 80.2px;
+  margin: 0 auto;
+  -webkit-line-clamp: 5;
+  -webkit-box-orient: vertical;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
